--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Number Guesser</h1>
+        <p> Guess a number between <span class="min-num">1</span> and <span class="max-num">10</span></p>
+        <input type="number" id="guess-input" placeholder="Enter your guess...">
+        <input type="submit" value="Submit" id="guess-value">
+        <p class="message"></p>
+    </div>    
 </body>
 
 <script src="app.js"></script>
